Convert Datapacks without group tag